--- a/config.json.example
+++ b/config.json.example
@@ -1,9 +1,9 @@
 {
   "session1": {
-    "SESSION_ID": "levanter_sessionid",
-    "PREFIX": "^[.,!]",
+    "SESSION_ID": "oussama",
+    "PREFIX": "a",
     "SUDO": "0",
-    "STICKER_PACKNAME": "❤️,LyFE",
+    "STICKER_PACKNAME": "❤️,oussama",
     "ALWAYS_ONLINE": "false",
     "RMBG_KEY": "null",
     "WARN_LIMIT": "3",
@@ -21,23 +21,53 @@
     "MODEL": "gpt-3.5-turbo",
     "ANTI_DELETE": "null",
     "PERSONAL_MESSAGE": "null",
-    "DISABLE_START_MESSAGE": "false",
+    "DISABLE_START_MESSAGE": "true",
     "WARN_MESSAGE": "⚠️WARNING⚠️\n*User :* &mention\n*Warn :* &warn\n*Remaining :* &remaining",
     "WARN_RESET_MESSAGE": "WARN RESET\nUser : &mention\nRemaining : &remaining\nWARN_KICK_MESSAGE=&mention kicked",
     "WARN_KICK_MESSAGE": "&mention kicked",
     "DELETE_TYPE": "all",
     "LIST_TYPE": "text",
     "BING_COOKIE": "",
-    "GEMINI_API_KEY": "",
+    "GEMINI_API_KEY": "AIzaSyDlctKgcANsI8Dnaj6_u7hdh9EnlfJFyZM",
     "GROUP_ADMINS": "",
     "CMD_REACTION": "true"
   },
+  
+  
+  
+  
   "session2": {
-    "SESSION_ID": "levanter_sessionid",
-    "PREFIX": "null"
-  },
-  "session3": {
-    "SESSION_ID": "levanter_sessionid",
-    "PREFIX": ".."
+      "SESSION_ID": "zohair",
+    "PREFIX": ".",
+    "SUDO": "212705205397",
+    "STICKER_PACKNAME": "❤️,zohair",
+    "ALWAYS_ONLINE": "false",
+    "RMBG_KEY": "null",
+    "WARN_LIMIT": "3",
+    "FORCE_LOGOUT": "false",
+    "DISABLE_BOT": "null",
+    "ANTILINK_MSG": "_Antilink Detected &mention kicked_",
+    "ANTISPAM_MSG": "_Antispam Detected &mention kicked_",
+    "ANTIWORDS_MSG": "_AntiWord Detected &mention kicked_",
+    "ANTIWORDS": "word",
+    "REJECT_CALL": "false",
+    "AUTO_STATUS_VIEW": "false",
+    "SEND_READ": "false",
+    "AJOIN": "false",
+    "GPT": "free",
+    "MODEL": "gpt-3.5-turbo",
+    "ANTI_DELETE": "null",
+    "PERSONAL_MESSAGE": "null",
+    "DISABLE_START_MESSAGE": "true",
+    "WARN_MESSAGE": "⚠️WARNING⚠️\n*User :* &mention\n*Warn :* &warn\n*Remaining :* &remaining",
+    "WARN_RESET_MESSAGE": "WARN RESET\nUser : &mention\nRemaining : &remaining\nWARN_KICK_MESSAGE=&mention kicked",
+    "WARN_KICK_MESSAGE": "&mention kicked",
+    "DELETE_TYPE": "all",
+    "LIST_TYPE": "text",
+    "BING_COOKIE": "",
+    "GEMINI_API_KEY": "AIzaSyB9fVDozwTK3znlw4lRr8r9a0myTTYXUcw",
+    "GROUP_ADMINS": "",
+    "CMD_REACTION": "true"
   }
-}
+  
+} 
